fix: Remove extra spacing below TOTAL in mobile order summary

--- a/assets/checkout-mobile.css
+++ b/assets/checkout-mobile.css
@@ -108,7 +108,7 @@
     border: solid var(--fluidcheckout--section--border-width,1px) var(--fluidcheckout--section--border-color,var(--fluidcheckout--border-color,var(--fluidcheckout--color--light-grey,#d8d8d8)));
     padding: 20px;
     margin: 0 -20px;
-    margin-top: 24px;
+    margin-top: 0;
   }
 }
 
